--- a/requirements.txt
+++ b/requirements.txt
@@ -7,35 +7,34 @@ py-tgcalls
 sqlalchemy
 psycopg2
 redis
-aiohttp==3.7.4
-async-lru==1.0.2
-async-timeout==3.0.1
-asyncio==3.4.3
-attrs==21.2.0
-backports.functools-lru-cache==1.6.4
-beautifulsoup4==4.9.1
-bs4==0.0.1
-certifi==2020.6.20
-chardet==3.0.4
-chucknorris==2.8
-google==3.0.0
-google-search==1.1.1
-googlesearch-python==2020.0.2
-greenlet==1.1.0
-idna==2.10
-joke-generator==1.0.1
-lxml==4.6.3
-multidict==5.1.0
-nekobin==0.0.3
-Pastebin==1.1.2
-pyaes==1.6.1
-PySocks==1.7.1
-pyspeedtest==1.2.7
-requests==2.24.0
-soupsieve==2.0.1
-speedtest-cli==2.1.3
-TgCrypto==1.2.2
-typing-extensions==3.10.0.0
-urllib3==1.25.9
-yarl==1.6.3
+aiohttp
+async-lru
+async-timeout
+asyncio
+attrs
+backports.functools-lru-cache
+beautifulsoup4
+bs4
+certifi
+chardet
+chucknorris
+google
+google-search
+googlesearch-python
+greenlet
+idna
+joke-generator
+lxml
+multidict
+nekobin
+Pastebin
+pyaes
+PySocks
+pyspeedtest
+requests
+soupsieve
+speedtest-cli
+typing-extensions
+urllib3
+yarl
 carbonnow
