--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ Naked==0.1.31
 nekobin==0.0.3
 Pastebin==1.1.2
 psutil==5.8.0
-pytgcalls==0.5.0
+py-tgcalls==0.5.0
 pyaes==1.6.1
 Pyrogram==1.2.9
 PySocks==1.7.1
