--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ bs4==0.0.1
 certifi==2020.6.20
 chardet==3.0.4
 chucknorris==2.8
+youtube_dl
+youtubesearchpython
 google==3.0.0
 google-search==1.1.1
 googlesearch-python==2020.0.2
